--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
-
     <header class="sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
@@ -27,11 +26,11 @@
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
                 <a href="solutions.html" class="nav-link" data-translate="nav_solutions">Nos Solutions</a>
                 <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">Conseiller IA</a>
-                <a href="account.html" class="nav-link" data-translate="nav_account">Mon Compte</a>
-                <a href="contact.html" class="nav-link active" data-translate="nav_get_quote">Obtenir un devis</a>
+                <a href="account.php" class="nav-link" data-translate="nav_account">Mon Compte</a>
+                <a href="contact.html" class="button active" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
-            <div class="flex items-center">
-                 <select id="language-switcher" class="mr-4">
+            <div class="flex items-center space-x-3">
+                <select id="language-switcher" class="mr-1">
                     <option value="fr">FR</option>
                     <option value="en">EN</option>
                     <option value="ar">AR</option>
@@ -40,9 +39,9 @@
                     <svg id="theme-icon-light" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
                     <svg id="theme-icon-dark" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
                 </div>
-                <div class="md:hidden ml-4">
+                <div class="md:hidden ml-2">
                     <button id="menu-btn" class="focus:outline-none">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                     </button>
                 </div>
             </div>
@@ -52,11 +51,10 @@
             <a href="how-it-works.html" class="block py-2 px-4 text-sm" data-translate="nav_how_it_works_mobile">Comment ça marche</a>
             <a href="solutions.html" class="block py-2 px-4 text-sm" data-translate="nav_solutions_mobile">Nos Solutions</a>
             <a href="ai-advisor.html" class="block py-2 px-4 text-sm" data-translate="nav_ai_advisor_mobile">Conseiller IA</a>
-            <a href="account.html" class="block py-2 px-4 text-sm" data-translate="nav_account_mobile">Mon Compte</a>
+            <a href="account.php" class="block py-2 px-4 text-sm" data-translate="nav_account_mobile">Mon Compte</a>
             <a href="contact.html" class="block py-2 px-4 text-sm" data-translate="nav_get_quote_mobile">Obtenir un devis</a>
         </div>
     </header>
-
     <main>
         <section id="contact" class="py-20">
             <div class="container mx-auto px-6 text-center">
@@ -66,23 +64,23 @@
                     <p class="text-center text-text-300 mb-8" data-translate="contact_intro">
                         Une question ? Un projet ? N'hésitez pas à nous contacter. Notre équipe est prête à vous aider à franchir le pas vers l'agriculture intelligente.
                     </p>
-                    <form id="contact-form" action="/server/contact.php" method="POST">
+                    <form id="contact-form" action="server/contact.php" method="POST">
                         <input type="hidden" name="csrf_token" id="contact-csrf-token">
                         <div class="mb-6">
                             <label for="name" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_name">Nom</label>
-                            <input type="text" id="name" class="form-input" placeholder="Votre nom complet" required>
+                            <input type="text" id="name" name="name" class="form-input" placeholder="Votre nom complet" required>
                         </div>
                         <div class="mb-6">
                             <label for="email" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_email">Email</label>
-                            <input type="email" id="email" class="form-input" placeholder="votre.email@exemple.com" required>
+                            <input type="email" id="email" name="email" class="form-input" placeholder="votre.email@exemple.com" required>
                         </div>
                         <div class="mb-6">
                             <label for="phone" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_phone">Numéro de téléphone</label>
-                            <input type="tel" id="phone" class="form-input" placeholder="Votre numéro de téléphone (Optionnel)">
+                            <input type="tel" id="phone" name="phone" class="form-input" placeholder="Votre numéro de téléphone (Optionnel)">
                         </div>
                         <div class="mb-6">
                             <label for="message" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_message">Message</label>
-                            <textarea id="message" rows="4" class="form-input" placeholder="Décrivez votre projet ou votre question ici..." required></textarea>
+                            <textarea id="message" name="message" rows="4" class="form-input" placeholder="Décrivez votre projet ou votre question ici..." required></textarea>
                         </div>
                         <button type="submit" class="button w-full" data-translate="contact_send">
                             <i class="fas fa-paper-plane mr-2"></i> Envoyer le Message
@@ -92,11 +90,9 @@
             </div>
         </section>
     </main>
-
-    <footer class="text-center py-8 border-t border-border-soft">
+    <footer class="text-center py-8 border-t border-border-soft mt-12">
         <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
     </footer>
-
     <script src="aos.js"></script>
     <script src="script.js"></script>
 </body>
