--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FarmLink - Accueil</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="aos.css">
     <style>
       [data-aos]{opacity:1 !important;transform:none !important;}
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
-
     <header class="sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
@@ -26,11 +26,11 @@
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
                 <a href="solutions.html" class="nav-link" data-translate="nav_solutions">Nos Solutions</a>
                 <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">Conseiller IA</a>
-                <a href="account.html" class="nav-link" data-translate="nav_account">Mon Compte</a>
+                <a href="account.php" class="nav-link" data-translate="nav_account">Mon Compte</a>
                 <a href="contact.html" class="button" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
-            <div class="flex items-center">
-                <select id="language-switcher" class="mr-4">
+            <div class="flex items-center space-x-3">
+                <select id="language-switcher" class="mr-1">
                     <option value="fr">FR</option>
                     <option value="en">EN</option>
                     <option value="ar">AR</option>
@@ -39,9 +39,9 @@
                     <svg id="theme-icon-light" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
                     <svg id="theme-icon-dark" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
                 </div>
-                <div class="md:hidden ml-4">
+                <div class="md:hidden ml-2">
                     <button id="menu-btn" class="focus:outline-none">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                     </button>
                 </div>
             </div>
@@ -51,11 +51,10 @@
             <a href="how-it-works.html" class="block py-2 px-4 text-sm" data-translate="nav_how_it_works_mobile">Comment ça marche</a>
             <a href="solutions.html" class="block py-2 px-4 text-sm" data-translate="nav_solutions_mobile">Nos Solutions</a>
             <a href="ai-advisor.html" class="block py-2 px-4 text-sm" data-translate="nav_ai_advisor_mobile">Conseiller IA</a>
-            <a href="account.html" class="block py-2 px-4 text-sm" data-translate="nav_account_mobile">Mon Compte</a>
+            <a href="account.php" class="block py-2 px-4 text-sm" data-translate="nav_account_mobile">Mon Compte</a>
             <a href="contact.html" class="block py-2 px-4 text-sm" data-translate="nav_get_quote_mobile">Obtenir un devis</a>
         </div>
     </header>
-
     <main>
         <section id="home" class="hero-bg text-white min-h-screen flex items-center relative overflow-hidden">
             <div class="absolute inset-0 bg-black bg-opacity-60"></div>
@@ -85,7 +84,7 @@
                     <h2 class="section-title" data-translate="summary_solutions_title">Solutions Modulaires Puissantes</h2>
                     <p class="summary-desc" data-translate="summary_solutions_desc">Irrigation intelligente, contrôle des pompes, surveillance environnementale. Explorez nos solutions conçues pour optimiser vos ressources et maximiser vos rendements.</p>
                     <a href="solutions.html" class="button button--glass" data-translate="explore_solutions">Explorer nos solutions</a>
-                </div>                
+                </div>
                 <div class="summary-image">
                     <img src="image/background_im1.png" alt="Processus de modernisation" class="rounded-lg shadow-2xl">
                 </div>
@@ -113,44 +112,41 @@
             </div>
         </section>
 
-        <footer class="bg-bg-950 text-white">
-            <section id="testimonials" class="py-20" data-aos="fade-up">
-                <div class="container mx-auto px-6 text-center">
-                    <h2 class="section-title" data-translate="testimonials_title">Ce que disent nos agriculteurs</h2>
-                    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
-                        <div class="testimonial-card">
-                            <img src="image/Karim A.png" alt="Photo de Karim A." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
-                            <p class="text-lg italic mt-4" data-translate="testimonial_1_text">"FarmLink a transformé ma gestion de l'eau. J'économise du temps et de l'argent, et mes rendements n'ont jamais été aussi bons."</p>
-                            <div class="mt-4">
-                                <p class="font-bold" data-translate="testimonial_1_name">Karim A.</p>
-                                <p class="text-sm text-text-500" data-translate="testimonial_1_location">Agriculteur, Sidi Bouzid</p>
-                            </div>
+        <section class="bg-bg-950 text-white" data-aos="fade-up">
+            <div class="container mx-auto px-6 text-center py-20">
+                <h2 class="section-title" data-translate="testimonials_title">Ce que disent nos agriculteurs</h2>
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
+                    <div class="testimonial-card">
+                        <img src="image/Karim A.png" alt="Photo de Karim A." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
+                        <p class="text-lg italic mt-4" data-translate="testimonial_1_text">"FarmLink a transformé ma gestion de l'eau. J'économise du temps et de l'argent, et mes rendements n'ont jamais été aussi bons."</p>
+                        <div class="mt-4">
+                            <p class="font-bold" data-translate="testimonial_1_name">Karim A.</p>
+                            <p class="text-sm text-text-500" data-translate="testimonial_1_location">Agriculteur, Sidi Bouzid</p>
                         </div>
-                        <div class="testimonial-card">
-                            <img src="image/fatma.png" alt="Photo de Fatma M." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
-                            <p class="text-lg italic mt-4" data-translate="testimonial_2_text">"L'installation a été incroyablement simple sur mon équipement existant. Le panneau de contrôle est très intuitif."</p>
-                            <div class="mt-4">
-                                <p class="font-bold" data-translate="testimonial_2_name">Fatma M.</p>
-                                <p class="text-sm text-text-500" data-translate="testimonial_2_location">Exploitante d'oliveraie, Sfax</p>
-                            </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <img src="image/fatma.png" alt="Photo de Fatma M." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
+                        <p class="text-lg italic mt-4" data-translate="testimonial_2_text">"L'installation a été incroyablement simple sur mon équipement existant. Le panneau de contrôle est très intuitif."</p>
+                        <div class="mt-4">
+                            <p class="font-bold" data-translate="testimonial_2_name">Fatma M.</p>
+                            <p class="text-sm text-text-500" data-translate="testimonial_2_location">Exploitante d'oliveraie, Sfax</p>
                         </div>
-                        <div class="testimonial-card">
-                            <img src="image/yousef.png" alt="Photo de Youssef B." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
-                            <p class="text-lg italic mt-4" data-translate="testimonial_3_text">"Le conseiller IA est un véritable plus. Il m'a aidé à identifier un problème de ravageurs avant qu'il ne se propage. C'est l'avenir !"</p>
-                            <div class="mt-4">
-                                <p class="font-bold" data-translate="testimonial_3_name">Youssef B.</p>
-                                <p class="text-sm text-text-500" data-translate="testimonial_3_location">Serriste, Kairouan</p>
-                            </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <img src="image/yousef.png" alt="Photo de Youssef B." class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-border-soft">
+                        <p class="text-lg italic mt-4" data-translate="testimonial_3_text">"Le conseiller IA est un véritable plus. Il m'a aidé à identifier un problème de ravageurs avant qu'il ne se propage. C'est l'avenir !"</p>
+                        <div class="mt-4">
+                            <p class="font-bold" data-translate="testimonial_3_name">Youssef B.</p>
+                            <p class="text-sm text-text-500" data-translate="testimonial_3_location">Serriste, Kairouan</p>
                         </div>
                     </div>
                 </div>
-            </section>
-        </footer>
+            </div>
+        </section>
     </main>
-    <footer class="text-center py-8 border-t border-border-soft">
+    <footer class="text-center py-8 border-t border-border-soft mt-12">
         <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
     </footer>
-
     <script src="aos.js"></script>
     <script src="script.js"></script>
 </body>
